--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <div class="music-grid">
             <!-- Music Card 1 -->
             <div class="music-card animate__animated animate__fadeInUp float-animation">
-                <img src="/api/placeholder/400/250" alt="Music Track" class="music-card-image">
+                <img src="images.jpg" alt="Music Track" class="music-card-image">
                 <div class="music-card-content">
                     <h3>Sunset Melody</h3>
                     <p>Ambient Waves</p>
@@ -176,7 +176,7 @@
 
             <!-- Music Card 2 -->
             <div class="music-card animate__animated animate__fadeInUp float-animation" style="animation-delay: 0.2s;">
-                <img src="/api/placeholder/400/250" alt="Music Track" class="music-card-image">
+                <img src="images.jpg" alt="Music Track" class="music-card-image">
                 <div class="music-card-content">
                     <h3>Urban Nights</h3>
                     <p>City Rhythms</p>
@@ -186,7 +186,7 @@
 
             <!-- Music Card 3 -->
             <div class="music-card animate__animated animate__fadeInUp float-animation" style="animation-delay: 0.4s;">
-                <img src="/api/placeholder/400/250" alt="Music Track" class="music-card-image">
+                <img src="images.jpg" alt="Music Track" class="music-card-image">
                 <div class="music-card-content">
                     <h3>Mountain Echo</h3>
                     <p>Nature Sounds</p>
@@ -196,7 +196,7 @@
 
             <!-- Music Card 4 -->
             <div class="music-card animate__animated animate__fadeInUp float-animation" style="animation-delay: 0.6s;">
-                <img src="/api/placeholder/400/250" alt="Music Track" class="music-card-image">
+                <img src="images.jpg" alt="Music Track" class="music-card-image">
                 <div class="music-card-content">
                     <h3>Electric Pulse</h3>
                     <p>Techno Beats</p>
